+ Continuidade da história, + Intro da 4° torre + Comandos para auxiliar